--- a/app/templates/student/clan.html
+++ b/app/templates/student/clan.html
@@ -20,6 +20,15 @@ document.addEventListener('DOMContentLoaded', function() {
                 content.innerHTML = '<div class="alert alert-warning">You are not in a clan.</div>';
                 return;
             }
+            let bannerHtml = '';
+            if (clan.banner) {
+                bannerHtml = `<img src='${clan.banner}' alt='Clan Banner' class='img-fluid mb-2' style='max-width:100%;max-height:80px;'>`;
+            }
+            let emblemHtml = '';
+            if (clan.emblem) {
+                emblemHtml = `<img src='${clan.emblem}' alt='Clan Emblem' class='img-fluid mb-3' style='max-height:60px;'>`;
+            }
+            let themeStyle = clan.theme_color ? ` style='border: 2px solid ${clan.theme_color};'` : '';
             let membersHtml = '';
             if (clan.members && clan.members.length > 0) {
                 membersHtml = `<ul class='list-group mb-3'>` +
@@ -51,21 +60,22 @@ document.addEventListener('DOMContentLoaded', function() {
                 </div>
                 `;
             }
-            let emblemHtml = clan.emblem ? `<img src='${clan.emblem}' alt='Clan Emblem' class='me-2' width='48' height='48' style='vertical-align:middle;'>` : '';
+            let badgesHtml = '';
+            if (clan.badges && clan.badges.length > 0) {
+                badgesHtml = `<div class='mb-2'><strong>Clan Badges:</strong></div><div class='d-flex flex-wrap gap-2'>` +
+                  clan.badges.map(b => `
+                    <img src='${b.icon}' title='${b.name}: ${b.description}' alt='${b.name}' style='width:40px;height:40px;' class='badge-icon'>
+                  `).join('') + '</div>';
+            }
             content.innerHTML = `
-                <div class='card mb-4'>
-                    <div class='card-body'>
-                        <div class='d-flex align-items-center mb-2'>
-                            ${emblemHtml}
-                            <h4 class='mb-0'>${clan.name}</h4>
-                            <span class='badge bg-primary ms-3'>Level ${clan.level}</span>
-                        </div>
-                        <div class='text-muted mb-2'>${clan.description || ''}</div>
-                        ${metricsHtml}
-                        <h5 class='mt-4'>Members</h5>
-                        ${membersHtml}
-                    </div>
+                <div class='card p-4 mb-3'${themeStyle}>
+                    ${bannerHtml}
+                    ${emblemHtml}
+                    <h3>${clan.name}</h3>
                 </div>
+                ${badgesHtml}
+                ${membersHtml}
+                ${metricsHtml}
             `;
         })
         .catch(() => {
