--- a/app/templates/teacher/base_dashboard.html
+++ b/app/templates/teacher/base_dashboard.html
@@ -29,6 +29,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if active_page == 'clans_dashboard' %}active{% endif %}" href="{{ url_for('teacher.clan_dashboard') }}">
+                            <i class="fas fa-chart-bar"></i> Clans Dashboard
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if active_page == 'quests' %}active{% endif %}" href="{{ url_for('teacher.quests') }}">
                             <i class="fas fa-scroll"></i> Quests
                         </a>
