--- a/app/templates/teacher/base_dashboard.html
+++ b/app/templates/teacher/base_dashboard.html
@@ -44,6 +44,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if active_page == 'purchase_log' %}active{% endif %}" href="{{ url_for('teacher.purchase_log') }}">
+                            <i class="fas fa-receipt"></i> Shop Purchase Log
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if active_page == 'analytics' %}active{% endif %}" href="{{ url_for('teacher.analytics') }}">
                             <i class="fas fa-chart-bar"></i> Analytics
                         </a>
