--- a/app/templates/teacher/dashboard.html
+++ b/app/templates/teacher/dashboard.html
@@ -147,7 +147,7 @@
                         </a>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <a href="{{ url_for('teacher.quests') }}" class="btn btn-warning btn-block">
+                        <a href="{{ url_for('teacher_quests.list_quests') }}" class="btn btn-warning btn-block">
                             <i class="fas fa-tasks me-2"></i>Assign Quests
                         </a>
                     </div>
